// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeBreadcrumb/DeepPath matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 font-mono text-sm"
  >
    <a
      class="text-foreground font-medium hover:underline"
      href="/git-bug/tree/feature%2Fauth"
    >
      git-bug
    </a>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/feature%2Fauth/src"
      >
        src
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/feature%2Fauth/src/components"
      >
        components
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/feature%2Fauth/src/components/bugs"
      >
        bugs
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/feature%2Fauth/src/components/bugs/timeline"
      >
        timeline
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="text-foreground font-medium"
      >
        CommentItem.tsx
      </span>
    </span>
    <span
      class="text-muted-foreground ml-2 text-xs"
    >
      @ 
      feature/auth
    </span>
  </div>
</div>
`;

exports[`CodeBreadcrumb/FilePath matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 font-mono text-sm"
  >
    <a
      class="text-foreground font-medium hover:underline"
      href="/git-bug/tree/main"
    >
      git-bug
    </a>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/main/src"
      >
        src
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/main/src/components"
      >
        components
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-muted-foreground hover:text-foreground hover:underline"
        href="/git-bug/tree/main/src/components/ui"
      >
        ui
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right text-muted-foreground size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="text-foreground font-medium"
      >
        button.tsx
      </span>
    </span>
    <span
      class="text-muted-foreground ml-2 text-xs"
    >
      @ 
      main
    </span>
  </div>
</div>
`;

exports[`CodeBreadcrumb/RootPath matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 font-mono text-sm"
  >
    <a
      class="text-foreground font-medium hover:underline"
      href="/git-bug/tree/main"
    >
      git-bug
    </a>
    <span
      class="text-muted-foreground ml-2 text-xs"
    >
      @ 
      main
    </span>
  </div>
</div>
`;
